# omoai

./: .gitignore  .gitmodules  CODEBASE_REVIEW.md  COMPARISON.md  COMPLETED.md  LLM_TIMESTAMP_ENHANCEMENT_PLAN.md  POST_PROCESSING_ENHANCEMENT_PLAN.md  README.md  codebase_comparison_report.md  config.secure.yaml  config.yaml  debug_import.py  debug_import2.py  debug_service_mode.py  final_test_output.json  pyproject.toml  real_audio_test_output.json  start_api.py  test_abstract_pattern.py  test_api_integration.py  test_asr_fix.py  test_character_analysis.py  test_detailed_parsing.py  test_fix_validation.py  test_regex_debug.py  test_regex_fix.py  test_summary_parsing.py  test_unicode_normalization.py  tmp_punc_prompt.txt
.github/workflows/: ci.yml
archive/legacy_scripts/: asr.py
archive/tests/legacy_tests/: test_raw_transcript_exclusion.py
docs/: ANALYSIS_REPORT.md  API_INCLUDE_FILTERING_FIX.md  API_PLAN.md  API_TECHNICAL_DOC_VI.md  ARCHITECTURE.md  ASRResponse.md  BEST_PRACTICES.md  COMPONENT_ALIGNMENT_DOCS.md  COMPONENT_API_DOCS.md  COMPONENT_ASR_DOCS.md  COMPONENT_CHUNKFORMER_DOCS.md  COMPONENT_CONFIGURATION_DOCS.md  COMPONENT_LOGGING_DOCS.md  COMPONENT_POSTPROCESSING_DOCS.md  COMPONENT_POST_DOCS.md  CONFIGURATION.md  CUDA_MULTIPROCESSING_FIX.md  GAP_ANALYSIS.md  OUTPUT_REDESIGN_PLAN.md  README.md  REQUIREMENTS.md  SPEAKER_DIARIZATION_PLAN.md  STEP1_PYTORCH_OPTIMIZATIONS.md  STEP2_CONFIG_VALIDATION.md  STEP3_PIPELINE_MODULE.md  TESTING_REPORT.md  TESTING_SUMMARY.md  USAGE.md  api-refactor-plan.md  audio_duration_limits.md  ci.md  configuration.md  debug_plan.md  final_summary.md  loguru-migration.md  migration_guide.md  phoneme-alignment-integration-plan-v2.md  phoneme-alignment-integration-plan.md  reference.md  timestamped_summary_token_optimization.md  (+2 more)
docs/api/: REDESIGN_PROPOSAL.md  pipeline_endpoint.md  progress_reporting.md  reference.md
docs/architecture/: index.md  punctuation.md
docs/archive/: ANALYSIS_REPORT.md  API_ENHANCEMENT_SUMMARY.md  COMPARISON_REPORT.md  COMPONENT_API_DOCS.md  COMPONENT_MAIN_DOCS.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_CLI_DESIGN.md  INTERACTIVE_CLI_USAGE.md  POST_PY_ANALYSIS.md  PROJECT_ANALYSIS.md  STEP4_API_SINGLETONS.md  STEP5_STRUCTURED_LOGGING.md  STEP7_COMPREHENSIVE_TESTING.md
docs/development/: testing_report.md
docs/project/: gap_analysis.md  requirements.md
docs/user_guide/: configuration.md
logs/: api_server.jsonl
omoai-api/: __init__.py
omoai-api/app/: main.py
omoai-api/app/domain/audio/: controllers.py  schemas.py
omoai-api/tests/: test_api.py
scripts/: asr.py  ci-install.sh  clean.sh  dev.sh  lint.sh  post.py  post_backup.py  preprocess.py  test.sh
scripts/dev/: debug_abstract_pattern.py  debug_character_analysis.py  debug_detailed_parsing.py  debug_fix_validation.py  debug_regex_fix.py  debug_regex_patterns.py  debug_summary_parsing.py  debug_unicode_normalization.py  test_writer_ts.py
src/omoai/: interactive_cli.py  main.py
src/omoai/api/: app.py  asr_controller.py  config.py  dependencies.py  exceptions.py  health.py  jobs.py  logging.py  logging_enhanced.py  main_controller.py  metrics_middleware.py  models.py  postprocess_controller.py  preprocess_controller.py  request_id_middleware.py  services.py  services_enhanced.py  services_v2.py  singletons.py  timeout_middleware.py
src/omoai/api/scripts/: __init__.py  asr_wrapper.py  postprocess_wrapper.py  preprocess_wrapper.py
src/omoai/config/: __init__.py  schemas.py
src/omoai/integrations/: alignment.py  vad.py
src/omoai/logging/: __init__.py  config.py  formatters.py  logger.py  middleware.py
src/omoai/logging_system/: __init__.py  config.py  logger.py  metrics.py  middleware.py  serializers.py
src/omoai/output/: __init__.py  formatter.py  writer.py
src/omoai/output/plugins/: __init__.py  json.py  markdown.py  srt.py  text.py  vtt.py
src/omoai/pipeline/: __init__.py  asr.py  exceptions.py  pipeline.py  postprocess.py  postprocess_core_utils.py  postprocess_utils.py  preprocess.py
tests/: conftest.py  test_alignment_simple.py  test_api_include_filtering.py  test_api_include_integration.py  test_api_integration_real.py  test_api_services.py  test_api_singletons.py  test_asr_config_fix.py  test_asr_import_fix.py  test_benchmark.py  test_complete_integration.py  test_comprehensive_suite.py  test_config_validation.py  test_cuda_multiprocessing_fix.py  test_golden_integration.py  test_health_negative.py  test_module_import_fix.py  test_pipeline_integration.py  test_pipeline_module.py  test_pipeline_psutil_paths.py  test_pipeline_text_plain.py  test_punctuation_alignment.py  test_pytorch_optimizations.py  test_quality_metrics_fix.py  test_root_redirect.py  test_services_v2_integration.py  test_structured_logging.py  test_stub_llm.py  test_summary_normalization.py  test_utils.py  test_vietnamese_parsing.py
tests/api/: test_controller_metrics_diffs.py  test_summary_raw_flow.py
tests/assets/: README.md
tests/fixtures/: __init__.py  audio_fixtures.py  performance_fixtures.py  reference_data.py
tests/legacy_tests/: test_api_response.py  test_output.json
tests/logging/: test_logging_smoke.py
