[project]
name = "omoai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "flashinfer-python>=0.2.11.post3",
    "huggingface-hub>=0.34.4",
    "ijson>=3.4.0",
    "jiwer>=4.0.0",
    "litestar[standard]>=2.17.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "sentencepiece>=0.2.0",
    "speechbrain",
    "textgrid>=1.6.1",
    "tqdm>=4.67.1",
    "underthesea>=6.8.4",
    "vllm>=0.10.0",
]


[project.scripts]
start = "omoai.main:main"
interactive = "omoai.interactive_cli:run_interactive_cli"
api = "uvicorn omoai.api.app:app --reload"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
speechbrain = { git = "https://github.com/speechbrain/speechbrain.git", rev = "develop" }
